--- a/proyectoLP/css/index.css
+++ b/proyectoLP/css/index.css
@@ -25,6 +25,40 @@ a{
     text-decoration: none;
     color: #000000;
 }
+.contenedorCarrusel {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    overflow: hidden;
+    overflow-x:scroll;
+    padding: 20px 0;
+    margin-bottom: 20px;
+    scroll-behavior: smooth; /* Desplazamiento suave */
+}
+
+@keyframes desplazarCarrusel {
+    0% {
+        transform: translateX(0); /* Comienza desde la posición inicial */
+    }
+    100% {
+        transform: translateX(calc(-220px * 10)); /* Desplazamiento al final */
+    }
+}
+.contImgCarrusel {
+    flex: 0 0 auto;
+    height: 100px;
+    border-radius: 10px;
+    background-color: rgb(72, 149, 123);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.imgCarrusel {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 .subtitulo{
     font-size: 2em;
     color: black;
@@ -63,6 +97,12 @@ a{
 footer{
     background: linear-gradient(180deg , #ffadad, #f88f8f);
 
+}
+.subtituloF{
+    font-size: 2em;
+    color: black;
+    text-align: center;
+    margin: 0px 0px 40px 0px;
 }
 .enlaces{
     display: flex;
